# lbr-spi-driver

./: README.md
.github/workflows/: ci-actions.yml
app/: CMakeLists.txt
app/spi_test/: CMakeLists.txt  main.cc
app/spi_test/BSP_L476/: CMakeLists.txt  spi_app_bsp.cc  spi_app_bsp.h
common/: CMakeLists.txt
common/core/: CMakeLists.txt
common/core/periph/: CMakeLists.txt
common/core/periph/chip_select/: CMakeLists.txt  cs_gpio.cc  cs_gpio.h
common/drivers/bus/: spi.h
common/drivers/platform/stm32l4/: st_spi.cc  st_spi.h  st_spi_module.cc  st_spi_module.h
